# InfLauncher

./: !MSI.lnk  .gitignore  Compile.bat  Compile.ps1  CompileDeploy.bat  CompileDeploy.ps1  README.md  _headers  index.html  instructions.md  package-lock.json  package.json  servers.json  update.json
.github/workflows/: release-security.yml
public/: servers.json
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  private.key  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: Mods.tsx  Servers.tsx  Settings.tsx  Sidebar.tsx
src/lib/: utils.ts
